Update Status,image url,housename,b_array

--- a/app/src/main/res/layout/activity_update_bldng_info.xml
+++ b/app/src/main/res/layout/activity_update_bldng_info.xml
@@ -74,7 +74,7 @@
                 android:focusableInTouchMode="false"
                 android:paddingLeft="10dp"
                 android:id="@+id/update_bldng_houseName"
-                android:background="@android:color/transparent"
+                android:background="@drawable/round_edittext2"
                 android:layout_weight="2"
                 android:layout_width="0dp"
                 android:layout_marginRight="10dp"
@@ -104,7 +104,7 @@
                 android:focusableInTouchMode="false"
                 android:paddingLeft="10dp"
                 android:id="@+id/update_bldng_houseAddress"
-                android:background="@android:color/transparent"
+                android:background="@drawable/round_edittext2"
                 android:layout_weight="2"
                 android:layout_width="0dp"
                 android:layout_marginRight="10dp"
@@ -213,7 +213,7 @@
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
-            <EditText
+            <AutoCompleteTextView
                 android:focusableInTouchMode="false"
                 android:paddingLeft="10dp"
                 android:id="@+id/update_bldng_bldngStatus"
@@ -226,122 +226,8 @@
 
         </LinearLayout>
 
-
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="37dp">
-
-            <TextView
-                android:textColor="@color/lightorange"
-                android:paddingLeft="1dp"
-                android:text="Owner Name:"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-            <EditText
-                android:focusableInTouchMode="false"
-                android:paddingLeft="10dp"
-                android:id="@+id/update_bldng_ownername"
-                android:background="@drawable/round_edittext2"
-                android:layout_weight="2"
-                android:layout_width="0dp"
-                android:layout_marginRight="10dp"
-                android:layout_height="35dp"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="37dp">
-
-            <TextView
-                android:textColor="@color/lightorange"
-                android:paddingLeft="1dp"
-                android:text="Owner Number:"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-            <EditText
-                android:focusableInTouchMode="false"
-                android:paddingLeft="10dp"
-                android:id="@+id/update_bldng_ownernmbr"
-                android:background="@drawable/round_edittext2"
-                android:layout_weight="2"
-                android:layout_width="0dp"
-                android:layout_marginRight="10dp"
-                android:layout_height="35dp"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="37dp">
-
-            <TextView
-                android:textColor="@color/lightorange"
-                android:paddingLeft="1dp"
-                android:text="Caretaker Name:"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-            <EditText
-                android:focusableInTouchMode="false"
-                android:paddingLeft="10dp"
-                android:id="@+id/update_bldng_caretakername"
-                android:background="@drawable/round_edittext2"
-                android:layout_weight="2"
-                android:layout_width="0dp"
-                android:layout_marginRight="10dp"
-                android:layout_height="35dp"/>
-
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="37dp">
-
-            <TextView
-                android:textColor="@color/lightorange"
-                android:paddingLeft="1dp"
-                android:text="Caretaker Number:"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-            <EditText
-                android:focusableInTouchMode="false"
-                android:paddingLeft="10dp"
-                android:id="@+id/update_bldng_caretakernumber"
-                android:background="@drawable/round_edittext2"
-                android:layout_weight="2"
-                android:layout_width="0dp"
-                android:layout_marginRight="10dp"
-                android:layout_height="35dp"/>
-
-
-        </LinearLayout>
-
-
-        <LinearLayout
+            android:visibility="gone"
             android:orientation="horizontal"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -359,7 +245,7 @@
             <EditText
                 android:focusableInTouchMode="false"
                 android:paddingLeft="10dp"
-                android:id="@+id/update_bldng_followupDate"
+                android:id="@+id/update_bldng_followupdate"
                 android:background="@drawable/round_edittext2"
                 android:layout_weight="2"
                 android:layout_width="0dp"
@@ -368,6 +254,8 @@
 
 
         </LinearLayout>
+
+
 
         <com.github.ybq.android.spinkit.SpinKitView
 
