--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,10 @@
         android:id="@+id/my_home"
         />
 
-
+    <item
+        android:id="@+id/payment"
+        android:icon="@drawable/payment"
+        android:title="payment"/>
 
     <item
         android:icon="@drawable/account_one"
