--- a/app/src/main/res/layout/payment_history_layout.xml
+++ b/app/src/main/res/layout/payment_history_layout.xml
@@ -2,136 +2,141 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    android:layout_marginTop="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
     android:layout_marginLeft="10dp"
+    android:layout_marginTop="10dp"
     android:layout_marginRight="10dp"
     app:cardCornerRadius="10dp"
-    app:cardElevation="5dp"
-    android:layout_width="match_parent"
-    android:layout_height="150dp">
+    app:cardElevation="5dp">
 
     <RelativeLayout
-        android:background="@drawable/round_edittext2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/round_edittext2">
 
         <LinearLayout
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
             android:id="@+id/one"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:textColor="@color/lightorange"
-                android:textSize="20sp"
-                android:text="Payment type:"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:text="Payment type:"
+                android:textColor="@color/lightorange"
+                android:textSize="20sp">
 
             </TextView>
 
             <TextView
-                android:layout_gravity="center_vertical"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:text="One time Payment"
+
+
                 android:id="@+id/payment_type"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="One time Payment"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginTop="5dp"
-
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:id="@+id/two"
-            android:layout_below="@id/one"
-            android:orientation="horizontal"
+
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/one"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:textColor="@color/lightorange"
-                android:textSize="20sp"
-                android:text="Amount:"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:text="Amount:"
+                android:textColor="@color/lightorange"
+                android:textSize="20sp">
 
             </TextView>
+
             <TextView
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:layout_gravity="center_vertical"
-                android:text="1000"
                 android:id="@+id/payment_amount"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="1000"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginTop="5dp"
-
-            android:layout_marginLeft="10dp"
             android:id="@+id/three"
-            android:layout_below="@id/two"
-            android:orientation="horizontal"
+
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/two"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
 
             <TextView
 
-                android:textColor="@color/lightorange"
-                android:textSize="20sp"
-                android:text="Date:"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:text="Date:"
+                android:textColor="@color/lightorange"
+                android:textSize="20sp">
 
             </TextView>
+
             <TextView
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:layout_gravity="center_vertical"
-                android:text="22/12/2019"
                 android:id="@+id/payment_date"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="22/12/2019"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
 
         </LinearLayout>
 
 
         <LinearLayout
-            android:layout_marginTop="5dp"
-
-            android:layout_marginLeft="10dp"
             android:id="@+id/four"
-            android:layout_below="@id/three"
-            android:orientation="horizontal"
+
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/three"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:textColor="@color/lightorange"
-                android:textSize="20sp"
-                android:text="Payment Staus:"
                 android:layout_width="150dp"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:text="Payment Staus:"
+                android:textColor="@color/lightorange"
+                android:textSize="20sp">
 
             </TextView>
+
             <TextView
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:layout_gravity="center_vertical"
-                android:text="22/12/2019"
                 android:id="@+id/payment_status"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="22/12/2019"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
 
         </LinearLayout>
