payment history added

--- a/app/src/main/res/layout/activity_fworker_profile.xml
+++ b/app/src/main/res/layout/activity_fworker_profile.xml
@@ -101,7 +101,8 @@
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:paddingLeft="10sp"
-                android:layout_height="40dp"
+                android:scrollHorizontally="true"
+                android:layout_height="50dp"
                 android:layout_below="@id/addresstxt"
                 android:background="@drawable/round_edittext2"
                 android:focusableInTouchMode="false"
@@ -111,7 +112,7 @@
                 android:id="@+id/fworker_address_road"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:gravity="center"
                 android:layout_below="@id/addresstxt"
                 android:layout_toRightOf="@id/fworker_address_area"
@@ -124,7 +125,7 @@
                 android:id="@+id/fworker_address_block"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:gravity="center"
                 android:layout_below="@id/addresstxt"
                 android:layout_toRightOf="@id/fworker_address_road"
