--- a/app/src/main/res/layout/home_list_layout.xml
+++ b/app/src/main/res/layout/home_list_layout.xml
@@ -1,63 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:id="@+id/item_list_id"
     android:layout_width="match_parent"
+    android:layout_height="200dp"
+    android:layout_marginTop="10sp"
     android:background="@color/white"
-    android:layout_height="200dp">
+    android:orientation="vertical">
 
 
     <androidx.cardview.widget.CardView
-        app:cardElevation="5dp"
-        app:cardCornerRadius="10dp"
-
         android:layout_width="match_parent"
-        android:layout_height="180dp">
+        android:layout_height="200dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="5dp">
 
 
-        <LinearLayout
-
-            android:background="@drawable/round_edittext2"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:layout_margin="5dp"
-                android:id="@+id/myhome_frag_bldngName"
-                android:text="Building Name"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/round_edittext2"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <TextView
-                android:textSize="17sp"
-                android:layout_margin="5dp"
-                android:id="@+id/myhome_frag_bldngAddress"
-                android:text="Building Address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-            <TextView
+                <TextView
 
-                android:textSize="17sp"
-                android:layout_margin="5dp"
-                android:id="@+id/myhome_frag_bldngstatus"
-                android:text="Building status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:textSize="17sp"
-                android:layout_margin="5dp"
-                android:id="@+id/myhome_frag_bldngvisitdate"
-                android:text="Building Visit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                    android:id="@+id/myhome_frag_bldngName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="Building Name"
+                    android:textColor="@color/black"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/myhome_frag_bldngAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="Building Address"
+                    android:textSize="17sp" />
+
+                <TextView
+
+                    android:id="@+id/myhome_frag_bldngstatus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="Building status"
+                    android:textSize="17sp" />
+
+                <TextView
+                    android:id="@+id/myhome_frag_bldngvisitdate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="Building Visit"
+                    android:textSize="17sp"
+                    android:maxLines="1"/>
+
+            </LinearLayout>
+
 
 
     </androidx.cardview.widget.CardView>
