--- a/app/src/main/res/layout/element_bottom_navigation.xml
+++ b/app/src/main/res/layout/element_bottom_navigation.xml
@@ -6,9 +6,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:itemIconTint="@color/orange"
-        app:itemTextColor="@color/orange"
+        app:itemTextColor="@color/black"
 
-    android:background="?android:attr/windowBackground"
+        android:background="?android:attr/windowBackground"
         app:menu="@menu/bottom_nav_menu"
         />
 
