payment layout,payment fragment

--- a/app/src/main/res/layout/element_bottom_navigation.xml
+++ b/app/src/main/res/layout/element_bottom_navigation.xml
@@ -5,9 +5,9 @@
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:itemIconTint="@color/orange"
-        app:itemTextColor="@color/black"
-
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@drawable/selector_bottombar_text"
+        app:itemBackground="@color/grey_100"
         android:background="?android:attr/windowBackground"
         app:menu="@menu/bottom_nav_menu"
         />
