--- a/app/src/main/res/layout/activity_add_building.xml
+++ b/app/src/main/res/layout/activity_add_building.xml
@@ -58,7 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <androidx.core.widget.NestedScrollView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -553,7 +553,7 @@
 
 
 
-    </androidx.core.widget.NestedScrollView>
+    </ScrollView>
 
 
 
