--- a/app/src/main/res/layout/activity_add_building.xml
+++ b/app/src/main/res/layout/activity_add_building.xml
@@ -37,27 +37,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/building_photo"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/building"
-        android:layout_alignParentTop="true"
-        app:civ_border_color="@color/black"
-        app:civ_border_width=".5dp" />
-
-    <TextView
-        android:textColor="@color/grey"
-        android:id="@+id/clickphototxt"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_below="@id/building_photo"
-        android:text="Click Above to capture image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -67,6 +46,29 @@
           android:layout_height="match_parent">
 
 
+          <de.hdodenhof.circleimageview.CircleImageView
+              android:id="@+id/building_photo"
+              android:layout_width="140dp"
+              android:layout_height="140dp"
+              android:layout_centerHorizontal="true"
+              android:layout_alignParentTop="true"
+              android:layout_gravity="center_horizontal"
+              android:layout_marginTop="10dp"
+              android:src="@drawable/building"
+              app:civ_border_color="@color/black"
+              app:civ_border_width=".5dp" />
+
+          <TextView
+              android:id="@+id/clickphototxt"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_below="@id/building_photo"
+              android:layout_gravity="center_horizontal"
+              android:layout_marginTop="10dp"
+              android:layout_centerHorizontal="true"
+              android:text="Click Above to capture image"
+              android:textColor="@color/grey" />
+
           <TextView
               android:textColor="@color/lightorange"
               android:text="Address *"
@@ -74,6 +76,7 @@
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:id="@+id/addresstxt"
+              android:layout_below="@id/clickphototxt"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
 
