bottomNav item icon color change

--- a/app/src/main/res/layout/activity_add_building.xml
+++ b/app/src/main/res/layout/activity_add_building.xml
@@ -256,7 +256,7 @@
 
           <RelativeLayout
               android:id="@+id/housecheck_layout"
-              android:visibility="visible"
+              android:visibility="gone"
               android:layout_below="@id/bldng_button_housecheck"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
