--- a/app/src/main/res/layout/payment_history_layout.xml
+++ b/app/src/main/res/layout/payment_history_layout.xml
@@ -13,6 +13,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:background="@drawable/round_edittext2">
 
         <LinearLayout
@@ -20,7 +22,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <TextView
@@ -123,7 +124,7 @@
             <TextView
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:text="Payment Staus:"
+                android:text="Staus:"
                 android:textColor="@color/lightorange"
                 android:textSize="20sp">
 
