--- a/app/src/main/res/layout/house_status_pending.xml
+++ b/app/src/main/res/layout/house_status_pending.xml
@@ -37,7 +37,8 @@
         android:id="@+id/btn"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="90dp"
-        android:background="@drawable/round_button"
+        android:background="@drawable/round_edittext2"
+        android:backgroundTint="@color/orange"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/txt"
         android:text="OK"
